--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -2,7 +2,7 @@
 <p id="notice"><%= notice %></p> 
 <% end %>
 
-<h1>Your Pragmatic Catalog - You have visited <%= session[:counter]%> time(s)<%= Random.rand %></h1>
+<h1>Your Pragmatic Catalog - You have visited <%= session[:counter]%> time(s)</h1>
 
 <% @products.each do |product| %>
   <div class="entry"> 
