--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -1,3 +1,4 @@
+<% unless cart.line_items.empty? %>
 <div class="cart_title">Your Cart</div> 
 <table>
   <%= render(cart.line_items) %>
@@ -9,4 +10,5 @@
 </table>
 
 <%= button_to 'Empty cart', cart, :method => :delete, 
-    :confirm => 'Are you sure?' %>
+    :confirm => 'Are you sure?', :remote => true %>
+<% end %>
